# tts

./: .gitignore  .travis.yml  Makefile.in  README  aclocal.m4  bindings.c  bindings.h  bling_import.pl  commands.c  commands.h  config.h.in  configure  configure.ac  entry.c  entry.h  functions.c  functions.h  queue.h  str.c  str.h  style.c  style.h  tailq.h  tts.c  tts.h  tts_curses.h  ttsrc.sample  ui.c  ui.h  variable.h  vers.c.sh  version.h  wcslcpy.c  wide.c  wide.h
